[workspace]
resolver = "3"
members = [
    "core",
    "utils/31corefs-dump",
    "utils/31corefs-label",
    "utils/31corefs-mkfs",
    "utils/31corefs-subvol",

]

[workspace.dependencies]
chrono = "0.4.42"
clap = { version = "4.5", features = ["derive"] }
fs31core = { path = "core" }
uuid = { version = "1.19", features = ["v4"] }
