[package]
name = "dump"
version = "0.1.0"
edition = "2021"
license = "MIT"
authors = ["31core 31core@tutanota.com"]

[[bin]]
name = "31corefs-dump"
path = "src/main.rs"

[dependencies]
clap = { version = "4.4.10", features = ["derive"] }
lib31corefs = { path = "../../lib31corefs" }
uuid = { version = "1.6.1", features = ["v4"] }
