[package]
name = "dump"
version = "0.1.0"
edition = "2024"
license = "MIT"
authors = ["31core 31core@tutanota.com"]

[[bin]]
name = "31corefs-dump"
path = "src/main.rs"

[dependencies]
chrono = "0.4.40"
clap = { version = "4.5.32", features = ["derive"] }
lib31corefs = { path = "../../lib31corefs" }
uuid = { version = "1.16.0", features = ["v4"] }
